:lipstick: Adds new CSS polishing

--- a/frontend/src/app/main/ui/workspace/sidebar/layers.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/layers.scss
@@ -20,6 +20,7 @@
     min-height: $s-32;
     margin-top: $s-2;
     margin-bottom: $s-4;
+    padding-right: $s-8;
     .page-name {
       @include tabTitleTipography;
       padding: 0 $s-12;
