:tada: Add push notifications support

--- a/frontend/resources/styles/common/framework.scss
+++ b/frontend/resources/styles/common/framework.scss
@@ -1157,6 +1157,7 @@ input[type="range"]:focus::-ms-fill-upper {
 
     .wrapper {
       display: flex;
+      align-items: center;
 
       .icon {
         padding: $size-2;
@@ -1173,6 +1174,9 @@ input[type="range"]:focus::-ms-fill-upper {
         padding: $size-2;
         width: 100%;
         align-items: center;
+
+        padding: 10px 15px;
+        min-height: 48px;
       }
     }
 
