:lipstick: Adds new modal and toolbar styles

--- a/frontend/resources/styles/common/refactor/mixins.scss
+++ b/frontend/resources/styles/common/refactor/mixins.scss
@@ -31,6 +31,13 @@
 
 @mixin titleTipography {
   font-family: "worksans", sans-serif;
+  font-size: $fs-12;
+  font-weight: $fw400;
+  line-height: 1.2;
+}
+
+@mixin titleBigTipography {
+  font-family: "worksans", sans-serif;
   font-size: $fs-14;
   font-weight: $fw400;
   line-height: 1.2;
