--- a/frontend/src/app/main/ui/components/title_bar.scss
+++ b/frontend/src/app/main/ui/components/title_bar.scss
@@ -27,7 +27,7 @@
     color: var(--title-foreground-color);
   }
   .title-only {
-    margin-left: $s-8;
+    // margin-left: $s-8;
   }
 
   .toggle-btn {
