--- a/frontend/src/app/main/ui/workspace/sidebar/layers.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/layers.scss
@@ -21,6 +21,7 @@
     margin-top: $s-2;
     margin-bottom: $s-4;
     padding-right: $s-8;
+    margin-left: $s-8;
     .page-name {
       @include tabTitleTipography;
       padding: 0 $s-12;
