--- a/frontend/resources/styles/main/partials/share-link.scss
+++ b/frontend/resources/styles/main/partials/share-link.scss
@@ -70,7 +70,8 @@
             }
             .btn-primary,
             .btn-secondary,
-            .btn-warning {
+            .btn-warning,
+            .btn-danger {
               width: 126px;
               margin-bottom: 0px;
 
