--- a/frontend/resources/templates/rasterizer.mustache
+++ b/frontend/resources/templates/rasterizer.mustache
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>Penpot - Thumbnail Renderer</title>
+    <title>Penpot - Rasterizer</title>
     <link rel="icon" href="images/favicon.png" />
 
     <script>
@@ -20,7 +20,7 @@
   <body>
     {{# manifest}}
     <script src="{{& shared}}"></script>
-    <script src="{{& thumbnail-renderer}}"></script>
+    <script src="{{& rasterizer}}"></script>
     {{/manifest}}
   </body>
 </html>
