--- a/frontend/resources/styles/common/refactor/themes/default-theme.scss
+++ b/frontend/resources/styles/common/refactor/themes/default-theme.scss
@@ -10,8 +10,10 @@
   --color-background-tertiary: var(--dark-gray-3);
   --color-background-quaternary: var(--dark-gray-4);
   --color-background-subtle: var(--dark-gray-2-30);
+  --color-background-disabled: var(--off-white);
   --color-foreground-primary: var(--white);
   --color-foreground-secondary: var(--off-white);
+  --color-foreground-disabled: var(--dark-gray-4);
   --color-accent-primary: var(--green);
   --color-accent-primary-muted: var(--green-30);
   --color-accent-secondary: var(--lilac);
