--- a/frontend/resources/styles/common/refactor/themes/light-theme.scss
+++ b/frontend/resources/styles/common/refactor/themes/light-theme.scss
@@ -10,8 +10,10 @@
   --color-background-tertiary: var(--light-gray-3);
   --color-background-quaternary: var(--light-gray-4);
   --color-background-subtle: var(--light-gray-2-30); //Whatch this¡¡
+  --color-background-disabled: var(--light-gray-4);
   --color-foreground-primary: var(--black);
   --color-foreground-secondary: var(--off-black);
+  --color-foreground-disabled: var(--light-gray-1);
   --color-accent-primary: var(--purple);
   --color-accent-primary-muted: var(--purple-30);
   --color-accent-secondary: var(--blue);
