--- a/frontend/resources/styles/common/framework.scss
+++ b/frontend/resources/styles/common/framework.scss
@@ -1105,7 +1105,12 @@ input[type="range"]:focus::-ms-fill-upper {
     }
 
     .link {
+      background: none;
+      border: none;
       color: $color-info;
+      display: inline;
+      margin: 0;
+      text-decoration: underline;
     }
   }
 
