Fix some small frontend errors

--- a/frontend/src/app/main/ui/workspace.scss
+++ b/frontend/src/app/main/ui/workspace.scss
@@ -34,7 +34,7 @@
     justify-content: center;
     align-items: center;
     grid-area: viewport;
-    svg {
+    :global(svg#loader-pencil) {
       fill: var(--icon-foreground);
     }
   }
