--- a/frontend/resources/styles/main/partials/dashboard-grid.scss
+++ b/frontend/resources/styles/main/partials/dashboard-grid.scss
@@ -467,7 +467,9 @@
   }
   &.libs {
     background-image: url(/images/ph-left.svg), url(/images/ph-right.svg);
-    background-position: 15% bottom, 85% top;
+    background-position:
+      15% bottom,
+      85% top;
     background-repeat: no-repeat;
     align-items: center;
     border: 1px dashed #b1b2b5;
