--- a/frontend/resources/styles/main/partials/sidebar-element-options.scss
+++ b/frontend/resources/styles/main/partials/sidebar-element-options.scss
@@ -1204,7 +1204,9 @@
 
   .go-to-lib-button {
     color: $color-white;
-    transition: border 0.3s, color 0.3s;
+    transition:
+      border 0.3s,
+      color 0.3s;
     text-align: center;
     background: $color-gray-50;
     padding: 0.5rem;
