--- a/frontend/resources/styles/common/framework.scss
+++ b/frontend/resources/styles/common/framework.scss
@@ -632,7 +632,9 @@ input.element-name {
 
     &:before {
       border-radius: $br99;
-      transition: box-shadow 0.2s linear 0s, color 0.2s linear 0s;
+      transition:
+        box-shadow 0.2s linear 0s,
+        color 0.2s linear 0s;
     }
   }
 
@@ -692,13 +694,17 @@ input[type="radio"]:checked + label:before {
   }
 
   label {
-    transition: border 0.2s linear 0s, color 0.2s linear 0s;
+    transition:
+      border 0.2s linear 0s,
+      color 0.2s linear 0s;
     position: relative;
 
     &:before {
       top: 1.4px;
       border-radius: $br3;
-      transition: border 0.2s linear 0s, color 0.2s linear 0s;
+      transition:
+        border 0.2s linear 0s,
+        color 0.2s linear 0s;
     }
 
     &::after {
@@ -709,7 +715,9 @@ input[type="radio"]:checked + label:before {
       left: 3.2px;
       top: 0;
       font-size: $fs12;
-      transition: border 0.2s linear 0s, color 0.2s linear 0s;
+      transition:
+        border 0.2s linear 0s,
+        color 0.2s linear 0s;
     }
 
     &:after {
@@ -844,13 +852,17 @@ input[type="range"]::-webkit-slider-runnable-track {
   height: 6px;
   cursor: pointer;
   animate: 0.2s;
-  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+  box-shadow:
+    0px 0px 0px #000000,
+    0px 0px 0px #0d0d0d;
   background: $color-gray-60;
   border-radius: $br25;
   border: 0px solid #000101;
 }
 input[type="range"]::-webkit-slider-thumb {
-  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+  box-shadow:
+    0px 0px 0px #000000,
+    0px 0px 0px #0d0d0d;
   border: 0px solid #000000;
   height: 18px;
   width: 6px;
@@ -868,13 +880,17 @@ input[type="range"]::-moz-range-track {
   height: 8px;
   cursor: pointer;
   animate: 0.2s;
-  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+  box-shadow:
+    0px 0px 0px #000000,
+    0px 0px 0px #0d0d0d;
   background: $color-gray-60;
   border-radius: $br25;
   border: 0px solid #000101;
 }
 input[type="range"]::-moz-range-thumb {
-  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+  box-shadow:
+    0px 0px 0px #000000,
+    0px 0px 0px #0d0d0d;
   border: 0px solid #000000;
   height: 24px;
   width: 8px;
@@ -896,16 +912,22 @@ input[type="range"]::-ms-fill-lower {
   background: $color-gray-60;
   border: 0px solid #000101;
   border-radius: $br50;
-  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+  box-shadow:
+    0px 0px 0px #000000,
+    0px 0px 0px #0d0d0d;
 }
 input[type="range"]::-ms-fill-upper {
   background: $color-gray-60;
   border: 0px solid #000101;
   border-radius: $br50;
-  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+  box-shadow:
+    0px 0px 0px #000000,
+    0px 0px 0px #0d0d0d;
 }
 input[type="range"]::-ms-thumb {
-  box-shadow: 0px 0px 0px #000000, 0px 0px 0px #0d0d0d;
+  box-shadow:
+    0px 0px 0px #000000,
+    0px 0px 0px #0d0d0d;
   border: 0px solid #000000;
   height: 24px;
   width: 8px;
