--- a/frontend/resources/styles/main/partials/sidebar-layers.scss
+++ b/frontend/resources/styles/main/partials/sidebar-layers.scss
@@ -268,6 +268,9 @@ span.element-name {
   text-overflow: ellipsis;
   white-space: nowrap;
   flex: 1;
+  &.left-ellipsis {
+    direction: rtl; // hack for getting the ellipsis on the left side
+  }
 }
 
 .element-actions {
