--- a/frontend/src/app/main/ui/components/color_bullet_new.scss
+++ b/frontend/src/app/main/ui/components/color_bullet_new.scss
@@ -55,6 +55,9 @@
     height: 100%;
     width: 100%;
     clip-path: circle(50%);
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-position: center;
   }
   .color-bullet-wrapper > * {
     width: 100%;
