--- a/frontend/resources/styles/main/partials/inspect.scss
+++ b/frontend/resources/styles/main/partials/inspect.scss
@@ -143,6 +143,8 @@
     .color-text {
       width: 3rem;
       text-transform: uppercase;
+      text-overflow: ellipsis;
+      overflow: hidden;
     }
 
     .attributes-color-display {
