--- a/frontend/resources/styles/common/refactor/spacing.scss
+++ b/frontend/resources/styles/common/refactor/spacing.scss
@@ -38,6 +38,7 @@ $s-108: calc(var(--s-4) * 27);
 $s-116: calc(var(--s-4) * 29);
 $s-120: calc(var(--s-4) * 30);
 $s-124: calc(var(--s-4) * 31);
+$s-128: calc(var(--s-4) * 32);
 $s-136: calc(var(--s-4) * 34);
 $s-140: calc(var(--s-4) * 35);
 $s-148: calc(var(--s-4) * 37);
