:sparkles: Highlight on track hover

--- a/frontend/src/app/main/ui/workspace/sidebar/sitemap.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/sitemap.scss
@@ -176,7 +176,8 @@
             }
           }
         }
-        &:hover {
+        &:hover,
+        &.hover {
           .element-list-body {
             color: var(--layer-row-foreground-color-hover);
             background-color: var(--layer-row-background-color-hover);
