:lipstick: Adds new UI elements files and visual changes

--- a/frontend/resources/styles/common/refactor/basic-rules.scss
+++ b/frontend/resources/styles/common/refactor/basic-rules.scss
@@ -316,6 +316,7 @@
 
 .menu-dropdown {
   @include menuShadow;
+  color: var(--title-foreground-color-hover);
   display: flex;
   flex-direction: column;
   gap: $s-4;
