--- a/frontend/src/app/main/ui/components/tab_container.scss
+++ b/frontend/src/app/main/ui/components/tab_container.scss
@@ -28,6 +28,7 @@
   height: $s-32;
   border-radius: $br-8;
   background: var(--color-background-secondary);
+  padding: $s-2;
   cursor: pointer;
   font-size: $fs12;
   .tab-container-tab-wrapper {
