:lipstick: Update fill and selected color components

--- a/frontend/resources/styles/common/refactor/design-tokens.scss
+++ b/frontend/resources/styles/common/refactor/design-tokens.scss
@@ -130,6 +130,7 @@
   --input-border-color-disabled: var(--color-background-quaternary);
   --input-border-outline-color-active: var(--color-accent-primary-muted);
   --input-border-color-focus: var(--color-accent-primary);
+  --input-details-color: var(--color-background-primary);
 
   --pill-background-color: var(--color-background-tertiary);
   --pill-foreground-color: var(--color-foreground-primary);
