--- a/frontend/src/app/main/ui/components/color_bullet_new.scss
+++ b/frontend/src/app/main/ui/components/color_bullet_new.scss
@@ -12,7 +12,8 @@
   flex-direction: row;
   width: var(--bullet-size, $s-24);
   height: var(--bullet-size, $s-24);
-  margin-top: $s-4;
+  min-width: var(--bullet-size, $s-24);
+  min-height: var(--bullet-size, $s-24);
   border: $s-2 solid var(--color-bullet-border-color);
   border-radius: $br-circle;
   &.mini {
