:lipstick: Update stroke component

--- a/frontend/src/app/main/ui/components/select.scss
+++ b/frontend/src/app/main/ui/components/select.scss
@@ -38,6 +38,10 @@
     z-index: $z-index-3;
     overflow-y: auto;
     background-color: var(--menu-background-color);
+    .separator {
+      margin: 0;
+      height: $s-12;
+    }
   }
   .checked-element {
     display: flex;
