:sparkles: Multiple cells selection and area

--- a/frontend/resources/styles/main/partials/sidebar-element-options.scss
+++ b/frontend/resources/styles/main/partials/sidebar-element-options.scss
@@ -1855,13 +1855,13 @@
       }
     }
     .position-wrapper {
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr;
+      display: flex;
       width: 100%;
       max-width: 185px;
       height: 26px;
       border-radius: 4px;
       border: 1px solid $color-gray-60;
+
       .position-btn {
         display: flex;
         justify-content: center;
@@ -1871,12 +1871,21 @@
         cursor: pointer;
         color: $color-gray-20;
         border-right: 1px solid $color-gray-60;
+        flex: 1;
+
         &:last-child {
           border-right: none;
         }
         &.active,
         &:hover {
           color: $color-primary;
+        }
+
+        &[disabled] {
+          opacity: 0.5;
+          &:hover {
+            color: $color-gray-20;
+          }
         }
       }
     }
